test/error/error.input85.zc
Bad type in parameter list on line 1
